# ESP32-RemoteCamera

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  monitor.sh  partitions.csv  sdkconfig  sdkconfig.old  sizes.sh
components/battery/: Battery.c  CMakeLists.txt
components/camera/: CMakeLists.txt  Camera.c  OV5642.c  OV5642.h
components/common/: CMakeLists.txt  List.c  README.md
components/internal-storage/: CMakeLists.txt  README.md
components/logger/: CMakeLists.txt  LogList.c  Logger.c  README.md  VolatileLogFile.c
components/settings/: CMakeLists.txt  Settings.c
components/storage/: CMakeLists.txt  ExternalStorage.c  InternalStorage.c  InternalStorageCommon.h  InternalStorageNVS.c  InternalStorageNVS.h  InternalStorageSPIFFS.c  InternalStorageSPIFFS.h  README.md  StorageCommon.c  StorageCommon.h
components/taskwatcher/: CMakeLists.txt  TaskWatcher.c
components/test-utils/: CMakeLists.txt  README.md
components/wifi/: Wifi.c  (+1 more)
main/: CMakeLists.txt  Main.c  main.c  utils.h
main/services/: Battery.c  Battery.h  Camera.c  Camera.h  DataStore.c  DataStore.h  LogService.c  LogService.h  WebServer.c  WebServer.h  WifiService.c  WifiService.h  webserver.c  webserver.h  wifi.c  wifi.h
main/utils/: List.c
scripts/: build-flash-monitor.sh  build.sh  clean.sh  constants.sh  monitor.sh  setup-env.sh  sizes.sh
test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
test/main/: CMakeLists.txt  MainTest.c
webclient/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
webpages/: index.html  main.js.LICENSE.txt
(+65 files in other folders)
